crates/plotnik-tests/tests/04-emit/types/definitions/error_captured_void_ref.txt
Seq = {
  (expression_statement)
  (debugger_statement)
}

Q = (program (Seq) @x)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:6:14
  |
1 |   Seq = {
  |  _______-
2 | |   (expression_statement)
3 | |   (debugger_statement)
4 | | }
  | |_- defined here
5 |
6 |   Q = (program (Seq) @x)
  |                ^^^^^
